--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header>
         <hgroup>
         <h1 class="text-uppercase">
-            Pildora infomativas de anime
+            Pildoras infomativas anime
         </h1>
-
+       
         <h2 class="text-uppercase">
             <p>Informacion actualizada</p>
         </h2>
